--- a/src/App.css
+++ b/src/App.css
@@ -116,6 +116,11 @@ img {
   margin: 0.7rem 0;
 }
 
+.card:hover {
+    border: 1px solid #666;
+    border-radius: 5px;
+}
+
 /* List */
 .list {
   margin: 0.5rem 0;
@@ -376,6 +381,12 @@ table th {
   margin-right: 0.6rem;
 }
 
+.usersGrid {
+  display: grid;
+  gridTemplateColumns: repeat(4, 1fr);
+  gridGap: 1rem;
+}
+
 /* Mobile Styles */
 @media (max-width: 700px) {
   .hide-sm {
@@ -384,9 +395,13 @@ table th {
 
   .grid-2,
   .grid-3,
-  .grid-4 {
+  .grid-4{
     grid-template-columns: 1fr;
   }
+  
+  .usersGrid {
+  gridTemplateColumns: repeat(2, 1fr);
+  }  
 
   /* Text Styles */
   .x-large {
@@ -412,3 +427,17 @@ table th {
     justify-content: center;
   }
 }
+
+@media (max-width: 425px) {
+  .usersGrid {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 1024px) {
+  .usersGrid {
+    gridTemplateColumns: repeat(3, 1fr);
+  }
+}
+
+
