--- a/src/App.css
+++ b/src/App.css
@@ -383,7 +383,7 @@ table th {
 
 .usersGrid {
   display: grid;
-  gridTemplateColumns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gridGap: 1rem;
 }
 
@@ -400,7 +400,7 @@ table th {
   }
   
   .usersGrid {
-  gridTemplateColumns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   }  
 
   /* Text Styles */
@@ -436,7 +436,7 @@ table th {
 
 @media (max-width: 1024px) {
   .usersGrid {
-    gridTemplateColumns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
