--- a/src/App.css
+++ b/src/App.css
@@ -384,7 +384,7 @@ table th {
 .usersGrid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gridGap: 1rem;
+  grid-gap: 1rem;
 }
 
 /* Mobile Styles */
