--- a/src/App.css
+++ b/src/App.css
@@ -126,12 +126,10 @@ img {
 .card {
   padding: 1rem;
   margin: 0.7rem 0;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
   width: 100%;
   height: auto;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 1.6px 3.6px 0px, rgba(0, 0, 0, 0.15) 0px 0.3px 0.9px 0px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 1.6px 3.6px 0px,
+    rgba(0, 0, 0, 0.15) 0px 0.3px 0.9px 0px;
   background-color: #fff;
 }
 
@@ -143,7 +141,8 @@ img {
 }
 
 .repo:hover {
-  box-shadow: rgba(0, 0, 0, 0.7) 0px 1.6px 3.6px 0px, rgba(0, 0, 0, 0.45) 0px 0.3px 0.9px 0px;
+  box-shadow: rgba(0, 0, 0, 0.7) 0px 1.6px 3.6px 0px,
+    rgba(0, 0, 0, 0.45) 0px 0.3px 0.9px 0px;
   transform: scale(1.025);
 }
 
@@ -233,7 +232,7 @@ i.far.fa-user {
 
 .fa-check,
 .fa-times-circle {
-  margin-left: 10px
+  margin-left: 10px;
 }
 
 /* Grid */
@@ -284,8 +283,8 @@ i.far.fa-user {
   background-repeat: repeat-x;
   background-position: -1px -1px;
   background-size: 110% 110%;
-  border: 1px solid rgba(27, 31, 35, .2);
-  border-radius: .25em;
+  border: 1px solid rgba(27, 31, 35, 0.2);
+  border-radius: 0.25em;
 }
 
 .btn-link {
@@ -371,8 +370,8 @@ i.far.fa-user {
 .alert-success {
   background: var(--success-color);
   color: #fff;
-  border-color: rgba(27, 31, 35, .5);
-  box-shadow: inset 0 0.15em 0.3em rgba(27, 31, 35, .15);
+  border-color: rgba(27, 31, 35, 0.5);
+  box-shadow: inset 0 0.15em 0.3em rgba(27, 31, 35, 0.15);
 }
 
 .btn-white,
@@ -548,11 +547,6 @@ table th {
   .card-repo-wrapper {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(6, 175px);
     grid-gap: 0.1rem;
-  }
-
-  .repo {
-    overflow-x: auto;
   }
 }
