- added transitionGroup and some styles;

--- a/src/App.css
+++ b/src/App.css
@@ -521,6 +521,25 @@ table th {
   grid-gap: 1rem;
 }
 
+/* Animation (Add After) */
+.item-enter {
+  opacity: 0;
+}
+
+.item-enter-active {
+  opacity: 1;
+  transition: opacity 1000ms ease-in;
+}
+
+.item-exit {
+  opacity: 1;
+}
+
+.item-exit-active {
+  opacity: 0;
+  transition: opacity 1000ms ease-in;
+}
+
 @media (max-width: 1024px) {
   .usersGrid {
     grid-template-columns: repeat(3, 1fr);
