--- a/src/App.css
+++ b/src/App.css
@@ -239,7 +239,7 @@ img {
 }
 
 i {
-  margin-right: 10px;
+  margin-right: 0.6rem;
 }
 
 i.far.fa-user {
@@ -249,7 +249,7 @@ i.far.fa-user {
 
 .fa-check,
 .fa-times-circle {
-  margin-left: 10px;
+  margin-left: 0.6rem;
 }
 
 /* Grid */
@@ -290,7 +290,7 @@ i.far.fa-user {
   color: #24292e;
   background-color: #eff3f6;
   background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
-  padding: 6px 12px;
+  padding: 0.4rem 0.8rem;
   font-size: 14px;
   font-weight: 600;
   line-height: 20px;
@@ -350,12 +350,12 @@ ul .badge-wrapper {
 .badge {
   display: block;
   position: absolute;
-  top: -12px;
-  right: -12px;
-  line-height: 16px;
-  height: 16px;
-  padding: 0 5px;
-  border-radius: 10px;
+  top: -0.8rem;
+  right: -0.8rem;
+  line-height: 1rem;
+  height: 1rem;
+  padding: 0.05rem 0.4rem 0;
+  border-radius: 0.6rem;
 }
 
 .alert {
@@ -495,7 +495,7 @@ table th {
 }
 
 .navbar .fa-github {
-  margin-right: 10px;
+  margin-right: 0.6rem;
 }
 
 .navbar a {
