--- a/src/App.css
+++ b/src/App.css
@@ -448,6 +448,10 @@ input {
   font-family: 'Fira Code', monospace;
 }
 
+.title {
+  margin-top: 2rem;
+}
+
 .form-text {
   display: block;
   margin-top: 0.3rem;
