- function to define favorite language;

--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,10 @@ img {
   text-align: center;
 }
 
+.text-success {
+  color: var(--success-color);
+}
+
 .text-danger {
   color: var(--danger-color);
 }
