--- a/src/App.css
+++ b/src/App.css
@@ -150,6 +150,16 @@ img {
   transform: scale(1.025);
 }
 
+.footer {
+  text-align: center;
+  font-weight: 500;
+  font-size: 14px;
+  padding: 0.7rem 2rem;
+  background: var(--primary-color);
+  opacity: 0.9;
+  color: #fff;
+}
+
 /* Padding */
 .p {
   padding: 0.5rem;
