clear-button-resized

--- a/src/App.css
+++ b/src/App.css
@@ -309,7 +309,9 @@ i.far.fa-user {
 
 .btn-block {
   display: block;
-  width: 100%;
+  width: fit-content;
+  margin: 0.5rem auto;
+  padding: 0.4rem 1rem;
 }
 
 .btn-sm {
